# honestdid

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
honest_test_V/: benchmark_honestdid.R  benchmark_honestdid.py
honestdid/: __init__.py
tests/: benchmark_honestdid.py  r_test_results.json  test_honestdid.R  test_honestdid.ipynb
